add AMS cubing tool

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# AlphaMapleSAT specific
+ams_env/
+alphamaplesat/wandb/
+alphamaplesat/*.out
+alphamaplesat/*.cubes
+alphamaplesat/*.pkl
